--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name"	   : "wallacemaxters/timer",
 	"version"  : "1.0.0",
 	"description" : "Timer",
-	"required" : {
+	"require" : {
 		"php" : ">=5.4.0"
 	},
 	"autoload" : {
