--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,13 @@
 {
-	"name"	   : "wallacemaxters/timer",
-	"version"  : "1.6.0",
-	"description" : "Timer",
-	"license" : "MIT",
-	"require" : {
-		"php" : ">=5.4.0"
-	},
-	"autoload" : {
-		"psr-4": {
+    "name"     : "wallacemaxters/timer",
+    "description" : "Timer is a library for work with times, specially greather than 24 hours",
+    "license" : "MIT",
+    "require" : {
+        "php" : ">=5.4.0"
+    },
+    "autoload" : {
+        "psr-4": {
                      "WallaceMaxters\\": "src/WallaceMaxters/"
              }
-	}
+    }
 }
