--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,6 @@
         "psr-4": {
             "WallaceMaxters\\": "src/WallaceMaxters/"
         }
-    }
+    },
+    "minimum-stability" : "stable",
 }
