laravel support facade and service provider

--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,8 @@
         "psr-4": {
             "WallaceMaxters\\": "src/WallaceMaxters/"
         }
+    },
+    "suggest" : {
+        "illuminate/support": "for use with Laravel Framework"
     }
 }
