--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,10 @@
     "require" : {
         "php" : ">=5.4.0"
     },
+    "require-dev": {
+        "victorjonsson/markdowndocs": "dev-master",
+        "illuminate/support" : "4.*"
+    },
     "autoload" : {
         "psr-4": {
             "WallaceMaxters\\": "src/WallaceMaxters/"
