--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license" : "MIT",
     "require" : {
         "php" : ">=5.4.0",
-        "phplegends/collections" : "dev-master"
+        "phplegends/collections" : "1.*"
     },
     "require-dev": {
         "victorjonsson/markdowndocs": "1.2.*"
